fix riwayat order data duplikat setelah membuka detil dan kembali ke riwayat fix menyimpan ongkir dari api fix info harga ketika membuka detil produk

--- a/src/index.html
+++ b/src/index.html
@@ -33,5 +33,13 @@
 
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
-
+<style>
+  .cat-has-children:first-child{
+    content: 'X'
+    /* background-color: red; */
+    /* --color: yellow; */
+    color: yellow;
+    /* min-height: 300px; */
+}
+</style>
 </html>
